# Blender_eco

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.h  imgui.ini  inputs.hh  main.cpp  maintest.hh  render_utils.h  submain.hh  test.h
data/: space.ppm
src/backend/: backend_main.cpp  backend_main.hh  main.cpp  render.cpp  render.hh
src/backend/image/: image.cpp  image.hh
src/backend/object/: object.cpp  object.hh
src/backend/render/: intersection.cpp  intersection.hh  render.cpp  render.hh
src/backend/scene/: camera.cpp  camera.hh  light.hh  mesh.cpp  mesh.hh  object.cpp  object.hh  scece.cpp  scene.cpp  scene.hh
src/backend/src/: camera.hh  color.hh  image.cpp  image.hh  intersection.cpp  intersection.hh  light.hh  scece.cpp  scene.hh  texture_material.hh  utils.hh  vector3.hh
src/backend/src/object/: object.hh
src/backend/utils/: color.hh  texture_material.cpp  texture_material.hh  utils.hh  vector3.cpp  vector3.hh
src/frontend/: action.cpp  action.hh  app.cpp  app.h  app.hh  app_utils.cpp  app_utils.hh  env.cpp  env.hh  inputs.cpp  inputs.hh  mesh_action.cpp  mesh_action.hh  render_utils.cpp  render_utils.h  shader_utils.cpp  shader_utils.hh  ui_tree.cpp  ui_tree.hh
src/frontend/imgui/: imgui_demo.cpp  imgui_draw.cpp
src/shaders/: frag_gray.glsl  frag_phong.glsl  frag_phong_ambient.glsl  frag_phong_diffuse.glsl  frag_phong_specular.glsl  frag_test.glsl  fragment_shader.glsl  geo_gray.glsl  vertex_shader.glsl  vrtx_base.glsl  vrtx_gray.glsl  vrtx_test.glsl
src/shaders/basic/: basic.frag  basic.vert  basic.vtx
src/shaders/brdf/: brdf.frag  brdf.geom  brdf.vert
src/shaders/explosion/: explosion.geom  explosion.tesc  explosion.tese
src/shaders/fur/: fur.frag  fur.geom  fur.tesc  fur.tese
src/shaders/fur2/: basic.frag  basic.vert  fur2.frag  fur2.vert
src/shaders/hair/: hair.frag  hair.geo  hair.vtx
src/shaders/normal/: normal.frag  normal.geo  normal.geom  normal.vert  normal.vtx
src/shaders/outline/: outline.frag  outline.geom  outline.vert
src/shaders/phong/: phong.frag  phong.geom  phong.vert  phong.vtx
src/shaders/wave/: wave.frag  wave.tese  wave.vert
src/shaders/wavehair/: wave.frag  wave.geom  wave.tesc  wave.tese  wave.vert
test/: aeth.ppm  index.html  joli render.ppm  joli rendu.ppm  result.ppm  script.js
test/around/: around0.ppm  around1.ppm  around10.ppm  around11.ppm  around12.ppm  around13.ppm  around14.ppm  around15.ppm  around2.ppm  around3.ppm  around4.ppm  around5.ppm  around6.ppm  around7.ppm  around8.ppm  around9.ppm
test/ppmviewer/: index.html  styles.css
todoList/: index.html  todoList.js
